login page css fix and mobile responsive login, client view and freelancer view (#47)
* added client edit profile page

* fixed signin issue

* init commit

* fixed build

* build fix added

* redirect to projects page

* more bug fixes

* fixed milestone submission

* merged fix

* use wallet account everywhere

* remove unused references

* refactor

* truncate address

* clean up

* resposinve login, client view and freelancer view dashboard

* fix for conflicts

---------

--- a/src/styles/muiGlobal.css
+++ b/src/styles/muiGlobal.css
@@ -1,4 +1,4 @@
-/* brief-details */ 
+/* brief-details */
 .chat-popup.MuiBox-root {
     position: fixed;
     right: 150px;
@@ -57,12 +57,12 @@
     border-color: var(--theme-light-white);
 }
 
-.applicationList .MuiFormControl-root{
+.applicationList .MuiFormControl-root {
     width: 140px;
     cursor: pointer;
 }
 
-.MuiPaper-root.MuiMenu-paper.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation8.MuiPopover-paper{
+.MuiPaper-root.MuiMenu-paper.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation8.MuiPopover-paper {
     background: var(--theme-grey-dark);
     color: white;
 }
@@ -70,16 +70,28 @@
 .MuiFormLabel-root,
 .MuiInputBase-input,
 .MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.MuiSelect-icon.MuiSelect-iconStandard,
-.MuiSelect-select.MuiSelect-standard.MuiInputBase-input.MuiInput-input{
+.MuiSelect-select.MuiSelect-standard.MuiInputBase-input.MuiInput-input {
     color: white;
 }
 
-.profile-container .MuiInputAdornment-root.MuiInputAdornment-positionEnd.MuiInputAdornment-outlined.MuiInputAdornment-sizeMedium{
+.profile-container .MuiInputAdornment-root.MuiInputAdornment-positionEnd.MuiInputAdornment-outlined.MuiInputAdornment-sizeMedium {
     color: white;
     cursor: pointer;
 }
 
-.MuiDialog-paper{
+.MuiDialog-paper {
     background-color: var(--theme-grey-dark);
     color: white;
+}
+
+@media screen and (max-width: 470px) {
+    .MuiBottomNavigation-root{
+        height: 46px;
+        margin-bottom: 18px;
+    }
+
+    .MuiBottomNavigationAction-label,
+    .MuiBottomNavigationAction-label.Mui-selected {
+        font-size: 12px;
+    }
 }
